lab1/Test/L1-A-13-97.output
Error Type B at Line 1
Error Type B at Line 3
Error Type B at Line 12
Error Type A at Line 19
Error Type A at Line 25
Error Type A at Line 27
Error Type B at Line 36
Error Type A at Line 41
Error Type B at Line 43
