lab1/Test/L1-A-13-97.cmm
struct return Mi90g ;
struct {
  struct QBhp7sUHfdlBUK KCE2vnDSAUYd = = T9vK1IzNz4SPsv2TMzpr 
    && oSkFcxHx_Uv2c > o23_bWv5mCJP4ZyjV9E - ! I6Oq4QP4Y 
    [ YFFU2CrDb7nAFUh89 || jzQEk == VFUIFoH4Fz38V + RKkOQ3 
    * preSyj02 ( KWNdHJ823bUn0Hv14zcP , z_ = dGYLzckXEGFBY 
    < EbaUdLc5 [ TRyUtAUa9 != hpxHGEM056qFyxIpZu - ( iEnWF 
    || gpDsf2JJx >= - - ! yXnbnVES3GuwXwd ( YCdaUEuLHtvs_6P 
    <= m63AqQIqnIQ ) ) . eJ8VMR4dcsD8 || SEZ2oOJ_gEwk_ 
    * 1160288433 . aTQIgjR7gz ] ) . UitUP7CT ] / ! pnRU1coX_QgSVIr5p5c 
    ( ) * - 1880446975.681543961 ;
}h_oKr5P54BrutK8K , [ 184289149 ] 

;
float V1u2i ( int AsjD ) {
}
struct vxiifT3otQVa ;
int ;
int TZLAM2D22gAaFjwBp6D ( ) #{
}
int fi ( ) {
  while ( Y ) {
  }
}
int mzLbk4qP5rXG1QefG ( #int MZtlUEP , int ktg ) {
}
\int A6JadH6EdYLokvX1ON2i ( ) {
  if ( eHkskkKDl )   return td9G4c15K8 ;

}
struct h {
  struct mV8XYbC3BplzKXHSV1 zloDP7b4aN3dr4zidj8 , 
    W8WVEUOv ;
};
int ;
int ( ) {
  if ( gKHi )   kTtVMnHso7 ;
else   if ( BqzsDEZ4Tjz2L )   lYwxPwYWuTpcO ;


  if ( MXimax9bBbFJrv8Nr )   dzg6cWL8B4Pru7tUk3i $
    ;
else   ;

  eIeTZBSAGr7Sl5Zb ;
}
